--- a/index.html
+++ b/index.html
@@ -20,62 +20,57 @@
         .search-container {
             position: absolute; 
 			top: 10px; 
+			left: 10px; 
 			right: 10px; 
-			left: 10px;
 			z-index: 1000; 
 			display: flex; 
-			flex-direction: row; /* Alinea uno al lado del otro */
-			gap: 8px;
 			background: white; 
-			padding: 8px; 
-			border-radius: 10px;
-			box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-			height: 50px;
+			padding: 5px; 
+			border-radius: 8px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+			height: 50px; /* Altura fija del buscador */
 			box-sizing: border-box;
         }
 
         input#search-input {
-            flex-grow: 1; 
-			border: 1px solid #ddd; 
-			border-radius: 6px;
+            flex: 1; /* Esto lo hace flexible */
+			border: 1px solid #ccc; 
+			border-radius: 5px 0 0 5px; /* Redondeado solo a la izquierda */
 			padding: 0 12px; 
 			font-size: 16px; 
 			outline: none;
-			width: 10%;
+			height: 100%;
         }
 
         button#search-btn {
-            flex-shrink: 0; /* EVITA QUE SE ALARGUE */
+            width: 70px; /* ANCHO FIJO EN PÍXELES */
 			background: #2c3e50; 
 			color: white; 
 			border: none;
-			padding: 0 25px; 
-			border-radius: 6px; 
+			border-radius: 0 5px 5px 0; /* Redondeado solo a la derecha */
 			font-weight: bold;
-			font-size: 14px;
 			cursor: pointer;
 			height: 100%;
+			flex-shrink: 0; /* Prohibido encogerse */
         }
 
         /* Estilo de los códigos en el mapa */
         .grid-label {
             font-size: 11px; font-weight: bold; color: #1a5276;
-            text-align: center; pointer-events: none;
-            text-shadow: 0 0 3px white, 0 0 5px white;
+			text-align: center; pointer-events: none;
+			text-shadow: 0 0 3px white;
         }
 
         /* Botón de ubicación personalizado */
         .loc-button {
-            margin-top: 60px; 
-			background: white; 
-			width: 45px; 
-			height: 45px;
-			display: flex; 
-			align-items: center; 
-			justify-content: center;
-			border-radius: 8px; 
-			border: 2px solid rgba(0,0,0,0.2);
-			font-size: 22px;
+            position: absolute;
+			top: 70px; /* Lo bajamos 70px desde el tope */
+			left: 10px;
+			z-index: 1000;
+			background: white; width: 45px; height: 45px;
+			display: flex; align-items: center; justify-content: center;
+			border-radius: 8px; border: 2px solid rgba(0,0,0,0.2);
+			font-size: 22px; cursor: pointer;
         }
         .loc-button:active { background: #e0e0e0; }
     </style>
