--- a/index.html
+++ b/index.html
@@ -127,19 +127,48 @@ map.on("click", function (e) {
             [e.latlng.lng, e.latlng.lat],
             estafetasLayer
         );
-        if (hit.length > 0) {
-            vm = hit[0].feature.properties.VM_LEVEL || vm;
+        if (hit.length > 0 && hit[0].feature.properties.VM_LEVEL) {
+            vm = hit[0].feature.properties.VM_LEVEL;
         }
     }
 
+    // Si no hay estafeta → SOLO TEXTO
+    if (vm === "ZONA NO DEFINIDA") {
+        L.popup()
+            .setLatLng(e.latlng)
+            .setContent(`<b>ZONA NO DEFINIDA</b>`)
+            .openOn(map);
+        return;
+    }
+
+    // Generar código
     const cod7 = getCod7Car(e.latlng.lat, e.latlng.lng);
-    const postal = vm + "-" + cod7;
+
+    // Validación estricta del COD_7CAR
+    const codValido = /^[23456789ABCDEFGHJKMNPQRSTUVWXYZ]{3}\d{4}$/.test(cod7);
+
+    // Si algo falla → no mostrar código
+    if (!codValido) {
+        L.popup()
+            .setLatLng(e.latlng)
+            .setContent(`<b>${vm}</b>`)
+            .openOn(map);
+        return;
+    }
+
+    const postal = `${vm}-${cod7}`;
 
     L.popup()
         .setLatLng(e.latlng)
         .setContent(`
-            <b>${vm}</b><br>
-            <span style="font-size:22px;font-weight:bold">${postal}</span>
+            <div style="text-align:center">
+                <div style="font-weight:bold; color:#2c3e50; margin-bottom:4px;">
+                    CÓDIGO POSTAL
+                </div>
+                <div style="font-size:22px; font-weight:bold; color:#e67e22;">
+                    ${postal}
+                </div>
+            </div>
         `)
         .openOn(map);
 });
@@ -200,3 +229,4 @@ map.on("moveend zoomend", updateGrid);
 
 </body>
 </html>
+
